make sure entries-wrap is always full width

--- a/assets/scss/components/entry/_entry.scss
+++ b/assets/scss/components/entry/_entry.scss
@@ -80,6 +80,7 @@
 	flex-wrap: wrap;
 	align-items: var(--align-columns-vertical, unset);
 	justify-content: var(--align-columns);
+	width: 100%;
 	max-width: 100vw;
 	margin: calc(var(--row-gap) * -0.5) calc(var(--column-gap) * -0.5);
 
